--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
+apply plugin: 'jacoco'
+
+jacoco{
+	toolVersion '0.8.1'
+	reportsDir = file("{$buildDir}/customJacocoReportDir")
+}
