--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,5 @@ apply plugin: 'jacoco'
 
 jacoco{
 	toolVersion '0.8.1'
-	reportsDir = file("{$buildDir}/customJacocoReportDir")
+	//reportsDir = file("{$buildDir}/customJacocoReportDir")
 }
