--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,21 @@ jacoco{
 	toolVersion '3.0.3'
 	//reportsDir = file("${buildDir}/customJacocoReportDir")
 }
+task codeCoverageReport2(type: JacocoReport) {
+
+    // Gather execution data from all subprojects
+    // (change this if you e.g. want to calculate unit test/integration test coverage separately)
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    // Add all relevant sourcesets from the subprojects 
+    subprojects.each {
+       sourceSets it.sourceSets.main
+    }
+
+    reports {
+      xml.enabled true
+      html.enabled true
+      html.destination "${buildDir}/reports/jacoco"
+      csv.enabled false
+    }
+}
