Changes to be committed: 	modified:   build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,4 @@ jacocoTestReport {
     //additionalSourceDirs = files(coverageSourceDirs)
     executionData = files('build/jacoco/TestQueues.exec')
 }
+test.fianlizedBy jacocoTestReport
