--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,6 @@ jacocoTestReport {
       
     //sourceDirectories = files(coverageSourceDirs)
     //additionalSourceDirs = files(coverageSourceDirs)
-    executionData = files('build/jacoco/TestQueues.exec')
+    //executionData = files('build/jacoco/TestQueues.exec')
 }
 test.fianlizedBy jacocoTestReport
