--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ jacoco{
 	reportsDir = file("$buildDir/customJacocoReportDir")
 	//reportsDir = file("${buildDir}/customJacocoReportDir")
 }
-jacocoTestReport {
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/TestQueues.exec")
+task jacocoTestReport {
+    //executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/TestQueues.exec")
     //group = "Reporting"
     //description = "Generates Jacoco coverage reports"
     reports {
@@ -48,9 +48,9 @@ jacocoTestReport {
       
     //sourceDirectories = files(coverageSourceDirs)
     //additionalSourceDirs = files(coverageSourceDirs)
-    //executionData = files('build/jacoco/TestQueues.exec')
+    executionData = files('build/jacoco/TestQueues.exec')
 }
-codeCoverageReport.dependsOn {
+/*codeCoverageReport.dependsOn {
     subprojects*.test
-}
+}*/
 test.finalizedBy jacocoTestReport
